--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,56 @@
 ---
 # tasks file for search
+# wget -qO - https://artifacts.elastic.co/GPG-KEY-elasticsearch | sudo gpg --dearmor -o /usr/share/keyrings/elasticsearch-keyring.gpg
+
+- name: Get ip list of all nodes
+  register: host_ips
+  debug:
+    msg: "{{ hostvars[item].ansible_default_ipv4.address }}"
+  with_inventory_hostnames:
+    - elasticsearch
+
+- name: Get ip list of master nodes
+  register: master_host_ips
+  debug:
+    msg: "{{ hostvars[item].ansible_default_ipv4.address }}"
+  with_inventory_hostnames:
+    - master
+
+- name: "Generate elasticsearch config from var"
+  vars:
+    es_hosts: "{{ host_ips.results | map(attribute='msg') | list }}"
+    es_master_hosts: "{{ master_host_ips.results | map(attribute='msg') | list }}"
+  template:
+    src: elasticsearch.yml.j2
+    dest: /etc/elasticsearch/elasticsearch.yml
+    owner: root
+    group: elasticsearch
+    mode: 0664
+  become: true
+
+- name: "Setup elasticsearch master"
+  block:
+
+    - name: "Start master"
+      systemd:
+        name: elasticsearch
+        state: started
+        enabled: yes
+
+    # todo check if token allready exists
+
+    - name: "Generate node enrollement token"
+      shell: "/usr/share/elasticsearch/bin/elasticsearch-create-enrollment-token -s node | base64 > /tmp/node_enrollement_token"
+  
+    - name: "Download node enrollement token"
+      ansible.builtin.fetch:
+        src: "/tmp/node_enrollement_token"
+        dest: es-tmp/node_enrollement_token
+        flat: yes
+    
+    - name: "Remove tmp node enrollement token"
+      file:
+        path: "/tmp/node_enrollement_token"
+        state: absent
+        
+  when: "'master' in group_names"
