--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,22 @@
 ---
 # vars file for search
+cluster:
+  name: "es-ansible"
+node:
+  name: "{{ ansible_hostname }}"
+  attr: 
+    type: logging
+path:
+  data: /var/lib/elasticsearch
+  log: /var/log/elasticsearch
+bootstrap_memory_lock: false
+network_host: "{{ ansible_default_ipv4.address }}"
+http:
+  host: 0.0.0.0
+  port: 9200
+
+xpack:
+  security:
+    enabled: true
+    enrollment:
+      enabled: true
